--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
                 <figure>
                   <p><i class="pe-7s-map-marker"></i> Santiago, Chile</p>
                   <p><i class="pe-7s-mail"></i><a href="../../cdn-cgi/l/email-protection#b7d4d8d9c3d6d4c3f7d4d8dac7d6d9ce99d4d8da"><span class="__cf_email__" data-cfemail="e1828e8f95808295a1828e8c91808f98cf828e8c">[contacto@lameseria.cl]</span></a></p>
-                  <p><i class="pe-7s-call"></i> 56 9 659 99 44</p>
+                  <p><i class="pe-7s-call"></i> +56 9 659 99 44</p>
                 </figure>
                 <ul class="ps-list--social">
                   <li><a href="index.html#"><i class="fa fa-facebook"></i></a></li>
