--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -1,22 +1,16 @@
 <header class="header header--1" data-sticky="true">
       <div class="header__top">
         <div class="header__left">
-          <p><span><i class="pe-7s-call"></i> +56 9 659 99 44</span><span><i class="pe-7s-mail"></i><a href="#"> <span class="__cf_email__" data-cfemail="e6858a879383a682898b878f88c885898b">contacto@lameseria.cl</span></a></span></p>
+          <p><span><i class="pe-7s-call"></i> +56 9 85029491</span><span><i class="pe-7s-mail"></i><a href="#"> <span class="__cf_email__" data-cfemail="e6858a879383a682898b878f88c885898b">contacto@lameseria.cl</span></a></span></p>
         </div>
         <div class="header__center">
           <ul class="ps-list--social">
-                  <!-- <li><a href="index.html#"><i class="fa fa-facebook"></i></a></li> -->
                   <li><a href="https://www.instagram.com/lameseria.cl/" target="_blank"><i class="fa fa-instagram"></i> @lameseria.cl</a></li>
                 </ul>
-        <!--   <p>¡Oferta de invierno descuento de<span> 20%!</span><a href="shop-4-column.html"> Compra ahora</a></p> -->
+       
         </div>
         <div class="header__right">
-          <!-- <div class="ps-dropdown"><a href="index.html#">USD</a>
-            <ul class="ps-dropdown-menu">
-              <li><a href="index.html#">USD</a></li>
-              <li><a href="index.html#">CLP</a></li>
-            </ul>
-          </div> -->
+        
         </div>
       </div>
       <div class="navigation">
@@ -41,23 +35,16 @@
     <header class="header header--mobile" data-sticky="true">
       <div class="header__top">
         <div class="header__left">
-          <p><span><i class="pe-7s-call"></i> +56 9 659 99 44</span><span><i class="pe-7s-mail"></i><a href="#"> <span class="__cf_email__" data-cfemail="ddbeb1bca8b89db9b2b0bcb4b3f3beb2b0">[ contacto@lameseria.cl ]</span></a></span></p>
+          <p><span><i class="pe-7s-call"></i> +56 9 85029491</span><span><i class="pe-7s-mail"></i><a href="#"> <span class="__cf_email__" data-cfemail="ddbeb1bca8b89db9b2b0bcb4b3f3beb2b0">[ contacto@lameseria.cl ]</span></a></span></p>
         </div>
         <div class="header__center">
-         <!--  <p>¡Oferta de invierno descuento de<span> 20%!</span><a href="shop-4-column.html"> Compra ahora</a></p> -->
+      
            <ul class="ps-list--social">
-                  <!-- <li><a href="index.html#"><i class="fa fa-facebook"></i></a></li> -->
                   <li><a href="https://www.instagram.com/lameseria.cl/" target="_blank"><i class="fa fa-instagram"></i> @lameseria.cl</a></li>
                 </ul>
         </div>
         <div class="header__right">
-          <!-- <div class="ps-dropdown"><a href="index.html#">USD</a>
-            <ul class="ps-dropdown-menu">
-              <li><a href="index.html#">USD</a></li>
-              <li><a href="index.html#">SGD</a></li>
-              <li><a href="index.html#">AUD</a></li>
-            </ul>
-          </div> -->
+        
         </div>
       </div>
       <div class="navigation--mobile">
@@ -79,12 +66,7 @@
       </div>
       <div class="navigation__content">
         <div class="navigation__actions">
-        <!--   <div class="ps-dropdown"><a href="index.html#">USD</a>
-            <ul class="ps-dropdown-menu">
-              <li><a href="index.html#">USD</a></li>
-              <li><a href="index.html#">CLP</a></li>
-            </ul>
-          </div> -->
+
           <div class="header__actions"><a class="ps-search-btn" ><i class="pe-7s-search"></i></a>
         
           </div>
@@ -108,27 +90,20 @@
             <a ><img src="{{tix.images[0]}}" alt=""></a><span class="ps-btn--close ps-btn--no-boder"></span></div>
           <div class="ps-product__content"><a>{{tix.productName}}</a><span>{{tix.cantidad}} x CLP {{tix.globalPrice}}</span></div>
         </div>
-       <!--  <div class="ps-product--cart">
-          <div class="ps-product__thumbnail"><a href="product-standard.html"><img src="assets/assetslameseria/img/product/best-3-1.jpg" alt=""></a><span class="ps-btn--close ps-btn--no-boder"></span></div>
-          <div class="ps-product__content"><a href="product-standard.html#">Cyan Boheme - Cyan, M</a><span>Size: M</span><span>1x $45.00</span></div>
-        </div> -->
+     
       </div>
       <div class="ps-cart__footer">
         <h4>SubTotal: <span>CLP {{_uw.subTotal}}</span></h4><a class="ps-btn" routerLink="cart">Ver carrito</a><a class="ps-btn" >Pagar</a>
       </div>
     </div>
+    
        <div class="navigation--sidebar">
       <div class="navigation__header">
         <h3>Menu</h3><a class="ps-btn--close ps-btn--no-boder" href="index.html#"></a>
       </div>
       <div class="navigation__content">
         <div class="navigation__actions">
-         <!--  <div class="ps-dropdown"><a href="index.html#">USD</a>
-            <ul class="ps-dropdown-menu">
-              <li><a href="index.html#">USD</a></li>
-              <li><a href="index.html#">CLP</a></li>
-            </ul>
-          </div> -->
+      
           <div class="header__actions"><a class="ps-search-btn" href="index.html#"><i class="pe-7s-search"></i></a>
         
           </div>
