--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -68,7 +68,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 ">
-              <p>Copyright © 2020 <a href="index.html#">La meseria</a> Todos los derechos reservados. Desarrollado por <a href="http://www.tuw3bsite.com.ve" target="_blanck">Tuw3bsite</a></p>
+              <p>Copyright © 2020 <a href="index.html#">La meseria</a> Todos los derechos reservados. Desarrollado por <a href="http://www.tuw3bsite.com" target="_blanck">Tuw3bsite</a></p>
             </div>
             <!-- <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 ">
               <ul class="ps-footer__nav">
