--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -4,25 +4,45 @@
           <div class="ps-checkout">
             <div class="row">
               <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-                <form class="ps-form--checkout" action="http://nouthemes.net/html/claue/do_action" method="post">
+                <form class="ps-form--checkout"  class=""[formGroup]="ngFormCheckout" (ngSubmit) ="sendCheckout()">
                   <h3 class="ps-checkout__heading">Detalles de envio</h3>
                   <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-                      <div class="form-group">
+                      <!-- <div class="form-group">
                         <label>Nombres <sup>*</sup></label>
                         <input class="form-control" type="text" placeholder="">
-                      </div>
+                      </div> -->
+                      <div class="form-group">
+                        <label>Nombres <sup>*</sup></label>
+                          <input type="text" class="form-control" id="name" formControlName="name" placeholder="Nombres" [(ngModel)]="order.name"
+                          [ngClass]="{ 'is-invalid': submitted && fval.name.errors }"
+                          required><span class="required"></span>
+                          <div *ngIf="submitted && fval.name.errors" class="invalid-feedback">
+                            <div *ngIf="fval.name.errors.required" class="errorLabel">
+                            * El nombre es requerido.
+                            </div>
+                          </div>
+                        </div>
                     </div>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
                       <div class="form-group">
                         <label>Apellidos <sup>*</sup></label>
-                        <input class="form-control" type="text" placeholder="">
+                        <!-- <input class="form-control" type="text" placeholder=""> -->
+                         <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Apellidos" [(ngModel)]="order.lastName"
+                          [ngClass]="{ 'is-invalid': submitted && fval.lastName.errors }"
+                          required><span class="required"></span>
+                          <div *ngIf="submitted && fval.lastName.errors" class="invalid-feedback">
+                            <div *ngIf="fval.lastName.errors.required" class="errorLabel">
+                            * El apellido es requerido.
+                            </div>
+                          </div>
                       </div>
                     </div>
                   </div>
                   <div class="form-group">
                     <label>Nombre de la compañía (opcional)</label>
-                    <input class="form-control" type="text" placeholder="">
+                   <!--  <input class="form-control" type="text" placeholder=""> -->
+                    <input type="text" class="form-control" id="companyName" formControlName="companyName" placeholder="Nombre de la compañia" [(ngModel)]="order.companyName">
                   </div>
                   <div class="form-group">
                     <label>Provincia</label>
@@ -33,19 +53,48 @@
                   </div>
                   <div class="form-group">
                     <label>Dirección <sup>*</sup></label>
-                    <input class="form-control" type="text" placeholder="">
+                    <!-- <input class="form-control" type="text" placeholder=""> -->
+                     <input type="text" class="form-control" id="address" formControlName="address" placeholder="Dirección" [(ngModel)]="order.address"
+                          [ngClass]="{ 'is-invalid': submitted && fval.address.errors }"
+                          required><span class="required"></span>
+                          <div *ngIf="submitted && fval.address.errors" class="invalid-feedback">
+                            <div *ngIf="fval.address.errors.required" class="errorLabel">
+                            * La dirección es requerida.
+                            </div>
+                          </div>
                   </div>
                   <div class="form-group">
                     <label>Ciudad <sup>*</sup></label>
-                    <input class="form-control" type="text" placeholder="">
+                    <!-- <input class="form-control" type="text" placeholder=""> -->
+                     <input type="text" class="form-control" id="city" formControlName="city" placeholder="Ciudad" [(ngModel)]="order.city"
+                          [ngClass]="{ 'is-invalid': submitted && fval.city.errors }"
+                          required><span class="required"></span>
+                          <div *ngIf="submitted && fval.city.errors" class="invalid-feedback">
+                            <div *ngIf="fval.city.errors.required" class="errorLabel">
+                            * Campo requerido.
+                            </div>
+                          </div>
                   </div>
                   <div class="form-group">
                     <label>Telefono <sup>*</sup></label>
-                    <input class="form-control" type="text" placeholder="">
+                    <!-- <input class="form-control" type="text" placeholder=""> -->
+                     <input type="text" class="form-control" id="phone" formControlName="phone" placeholder="Teléfono" [(ngModel)]="order.phone"
+                          [ngClass]="{ 'is-invalid': submitted && fval.phone.errors }"
+                          required><span class="required"></span>
+                          <div *ngIf="submitted && fval.phone.errors" class="invalid-feedback">
+                            <div *ngIf="fval.phone.errors.required" class="errorLabel">
+                            * El telefono es requerido.
+                            </div>
+                          </div>
                   </div>
                   <div class="form-group">
                     <label>Email <sup>*</sup></label>
-                    <input class="form-control" type="email" placeholder="">
+                    <!-- <input class="form-control" type="email" placeholder=""> -->
+                    <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" [(ngModel)]="order.email"required [ngClass]="{ 'is-invalid': submitted && fval.email.errors }">
+                  <div *ngIf="submitted && fval.email.errors" class="invalid-feedback">
+                  <div *ngIf="fval.email.errors.required">* El email es requerido</div>
+              <div *ngIf="fval.email.errors.email">Ingrese una dirección de email válida</div>
+              </div>
                   </div>
                   <div class="form-group">
                     <div class="ps-checkbox">
@@ -55,7 +104,10 @@
                   </div>
                   <div class="form-group">
                     <label>Notas (opcional)</label>
-                    <textarea class="form-control" rows="5" placeholder=""></textarea>
+                    <!-- <textarea class="form-control" rows="5" placeholder=""></textarea> -->
+                       <input type="text" class="form-control" id="notes" formControlName="notes" placeholder="Notas" [(ngModel)]="order.notes"
+                          [ngClass]="{ 'is-invalid': submitted && fval.notes.errors }"
+                          required>
                   </div>
                 </form>
               </div>
@@ -105,7 +157,7 @@
                         Email: lameseria.cl@gmail.com
                       </p>
                         <form  ngNoForm1  [action]="this._uw.url" method="POST" [hidden]="_uw.webpay || !_uw.methodSeted">
-                  <button class="ps-btn ps-btn--outline ps-btn--black">Procesar pago</button>
+                  <button class="ps-btn ps-btn--outline ps-btn--black" (click)="sendCheckout()">Procesar pago</button>
                 </form>
                     </div>
                   </div>
