--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -8,10 +8,7 @@
                   <h3 class="ps-checkout__heading">Detalles de envio</h3>
                   <div class="row">
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
-                      <!-- <div class="form-group">
-                        <label>Nombres <sup>*</sup></label>
-                        <input class="form-control" type="text" placeholder="">
-                      </div> -->
+               
                       <div class="form-group">
                         <label>Nombres <sup>*</sup></label>
                           <input type="text" class="form-control" id="name" formControlName="name" placeholder="Nombres" [(ngModel)]="order.name"
@@ -27,8 +24,7 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 ">
                       <div class="form-group">
                         <label>Apellidos <sup>*</sup></label>
-                        <!-- <input class="form-control" type="text" placeholder=""> -->
-                         <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Apellidos" [(ngModel)]="order.lastName"
+                        <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Apellidos" [(ngModel)]="order.lastName"
                           [ngClass]="{ 'is-invalid': submitted && fval.lastName.errors }"
                           required><span class="required"></span>
                           <div *ngIf="submitted && fval.lastName.errors" class="invalid-feedback">
@@ -53,7 +49,6 @@
                   </div>
                   <div class="form-group">
                     <label>Dirección <sup>*</sup></label>
-                    <!-- <input class="form-control" type="text" placeholder=""> -->
                      <input type="text" class="form-control" id="address" formControlName="address" placeholder="Dirección" [(ngModel)]="order.address"
                           [ngClass]="{ 'is-invalid': submitted && fval.address.errors }"
                           required><span class="required"></span>
@@ -65,7 +60,6 @@
                   </div>
                   <div class="form-group">
                     <label>Ciudad <sup>*</sup></label>
-                    <!-- <input class="form-control" type="text" placeholder=""> -->
                      <input type="text" class="form-control" id="city" formControlName="city" placeholder="Ciudad" [(ngModel)]="order.city"
                           [ngClass]="{ 'is-invalid': submitted && fval.city.errors }"
                           required><span class="required"></span>
@@ -77,7 +71,6 @@
                   </div>
                   <div class="form-group">
                     <label>Telefono <sup>*</sup></label>
-                    <!-- <input class="form-control" type="text" placeholder=""> -->
                      <input type="text" class="form-control" id="phone" formControlName="phone" placeholder="Teléfono" [(ngModel)]="order.phone"
                           [ngClass]="{ 'is-invalid': submitted && fval.phone.errors }"
                           required><span class="required"></span>
@@ -89,12 +82,11 @@
                   </div>
                   <div class="form-group">
                     <label>Email <sup>*</sup></label>
-                    <!-- <input class="form-control" type="email" placeholder=""> -->
                     <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" [(ngModel)]="order.email"required [ngClass]="{ 'is-invalid': submitted && fval.email.errors }">
                   <div *ngIf="submitted && fval.email.errors" class="invalid-feedback">
                   <div *ngIf="fval.email.errors.required">* El email es requerido</div>
-              <div *ngIf="fval.email.errors.email">Ingrese una dirección de email válida</div>
-              </div>
+                  <div *ngIf="fval.email.errors.email">Ingrese una dirección de email válida</div>
+                  </div>
                   </div>
                   <div class="form-group">
                     <div class="ps-checkbox">
@@ -104,7 +96,6 @@
                   </div>
                   <div class="form-group">
                     <label>Notas (opcional)</label>
-                    <!-- <textarea class="form-control" rows="5" placeholder=""></textarea> -->
                        <input type="text" class="form-control" id="notes" formControlName="notes" placeholder="Notas" [(ngModel)]="order.notes"
                           [ngClass]="{ 'is-invalid': submitted && fval.notes.errors }"
                           required>
@@ -156,25 +147,21 @@
                         <br/>
                         Email: lameseria.cl@gmail.com
                       </p>
-                        <form  ngNoForm1  [action]="this._uw.url" method="POST" [hidden]="_uw.webpay || !_uw.methodSeted">
+                       
+                <div>
                   <button class="ps-btn ps-btn--outline ps-btn--black" >Procesar pago</button>
-                </form>
+                </div>
                     </div>
                   </div>
-                  <!-- <div class="ps-radio">
-                    <input class="form-control" type="radio" id="payment-method-2" name="payment-menthod"/>
-                    <label for="payment-method-2">Cash on delivery</label>
-                  </div> -->
+                 
                   <div class="ps-radio">
                     <input class="form-control" type="radio" id="payment-method-3" name="payment-menthod" (click)="setWebpay()">
                     <label for="payment-method-3">Pago en línea (Webpay) <img src="img/visa.jpg" alt=""></label>
                   </div>
-                  <form  ngNoForm  [hidden]="_uw.transf || !_uw.methodSeted">
+                  <div>
                   <button class="ps-btn ps-btn--outline ps-btn--black" (click)="sendCheckout()">Conectar con Transbank</button>
-                </form>
-        <!--         <form  ngNoForm  [action]="this._uw.url" method="POST" [hidden]="_uw.transf || !_uw.methodSeted">
-                  <button class="ps-btn ps-btn--outline ps-btn--black" (click)="sendCheckout()">Conectar con Transbank</button>
-                </form> -->
+                </div>
+        
                 </div>
               </div>
             </div>
